--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "apollo-client": "^2.6.0",
     "apollo-link": "^1.2.11",
     "apollo-link-ws": "^1.0.20",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-annotation": "^0.5.7",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.0",
     "rxjs": "~6.5.4",
@@ -40,7 +42,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.3",
-    "@angular/cli": "~9.1.3",
+    "@angular/cli": "^9.1.12",
     "@angular/compiler-cli": "~9.1.3",
     "@angular/language-service": "~9.1.3",
     "@graphql-codegen/typescript": "^1.15.1",
